--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         .modal-foot{padding:12px 16px;border-top:1px solid rgba(168,85,247,.2);flex-shrink:0}
         .close{width:32px;height:32px;display:flex;align-items:center;justify-content:center;background:none;border:none;color:#9ca3af;cursor:pointer}.close:hover{color:#fff}
         .fg{margin-bottom:14px}.fl{display:block;font-size:13px;font-weight:500;color:#d1d5db;margin-bottom:6px}
-        .fi,.ft{width:100%;padding:8px 12px;background:#000;border:0.5px solid rgba(168,85,247,.5);border-radius:8px;color:#fff;font-size:14px;font-family:inherit}
+        .fi,.ft{width:100%;padding:8px 12px;background:#000;border:0.5px solid rgba(168,85,247,.5);border-radius:8px;color:#fff;font-size:14px;font-family:inherit;color-scheme:dark}
         .fi:focus,.ft:focus{outline:none;border-color:#d8b4fe}.ft{resize:none;min-height:64px}
         .type-grid{display:grid;grid-template-columns:1fr 1fr;gap:8px}
         .tbtn{padding:8px 12px;background:#000;border:0.5px solid rgba(168,85,247,.4);border-radius:8px;color:#d1d5db;cursor:pointer;display:flex;align-items:center;justify-content:center;gap:6px;transition:all .2s;font-family:inherit;font-size:13px}
